--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,9 +18,9 @@
     </div>
 
     <div id="main_menu">
-        <a href="index.html">Latest</a>
-        <a href="best.html">Best</a>
-        <a href="people.html">People</a>
+        <a href="{% url 'blog:index' %}">Latest</a>
+        <a href="#">Best</a>
+        <a href="{% url 'blog:people' %}">People</a>
     </div>
 
 
