--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -6,20 +6,19 @@
 
     {% for post in posts %}
 
-    <a href="#">
+    <a href="{% url 'blog:post_detail' post.id %}">
         <div class="content">
             <h3>{{ post.title }}</h3>
             <img class="content_image" src={{ post.img.url }} alt="img">
             <p>{{ post.text|truncatewords:100 }}</p>
-            <p>By {{ post.author }} | {{ post.created_at|date:"H:m, F j, Y" }}</p>
-            <p><a href="#">Comments</a></p>
-            <p>Rating</p>
+            <p>By {{ post.author }} | {{ post.created_at|date:"H:m, F j, Y" }}</p>                 
+            <p>Rating: {{ post.rating }}</p>
         </div>
     </a>
 
     {% empty %}
 
-    <div class="content">
+    <div class="content_detail">
 
         <h4>No posts available yet.</h4>
 
