--- a/static/blog/base.css
+++ b/static/blog/base.css
@@ -33,7 +33,7 @@ footer a:hover {
 #main_menu {
     margin: 0;
     padding: 10px 0 10px 0;
-    background-color: #333;
+    background-color: #272A2Eff;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -41,23 +41,22 @@ footer a:hover {
 
 #main_menu a:hover {
     color: white;
-    transition: .3s;
+    transition: .15s;
 }
 
 #main_menu a {
-    margin: 40px;
+    margin: 0 20px 0 20px;
 }
 
 .article_list {
     text-align: center;
     margin: 20px;
-
 }
 
 .content {
     width: 60%;
     margin: 20px auto;
-    padding: 10px;
+    padding: 20px;
     border-radius: 5px;
     background-color: #272A2Eff;
     border-image-width: 20%;
@@ -66,11 +65,25 @@ footer a:hover {
 
 .content:hover {
     transform: scale(1.01);
-    transition: .3s;
+    transition: .15s;
+}
+
+.content_detail {
+    width: 60%;
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #272A2Eff;
+    border-image-width: 20%;
+    text-align: justify;
 }
 
 .content_image {
     float: left;
     max-width: 20%;
     padding: 0 20px 20px 0;
+}
+
+#comment_text {
+    margin-left: 20px;
 }
