--- a/static/blog/base.css
+++ b/static/blog/base.css
@@ -28,6 +28,57 @@ footer a:hover {
     margin: 0;
     color: #C8582Cff;
     font-family: 'Orbitron', sans-serif;
+    display: flex;
+}
+
+#signup {
+    background-color: midnightblue;
+    color: white;
+    border-radius: 5px;
+    text-align: center;
+    padding: 5px;
+    margin: 5px;
+    display: flex;
+    position: fixed;
+    right: 30px;
+}
+
+#signup:hover {
+    background-color: blue;
+    transition: .15s;
+}
+
+#login {
+    background-color: teal;
+    color: white;
+    border-radius: 5px;
+    text-align: center;
+    padding: 5px;
+    margin: 5px;
+    display: flex;
+    position: fixed;
+    right: 30px;
+    top: 45px;
+}
+
+#login:hover {
+    background-color: green;
+    transition: .15s;
+}
+
+.submit {
+    background-color: teal;
+    color: white;
+    border-radius: 5px;
+    text-align: center;
+    padding: 5px;
+    margin: 5px;
+    display: flex;
+}
+
+.submit:hover {
+    background-color: green;
+    transition: .15s;
 }
 
 #main_menu {
@@ -42,6 +93,7 @@ footer a:hover {
 #main_menu a:hover {
     color: white;
     transition: .15s;
+    text-shadow: 5px 5px 5px black;
 }
 
 #main_menu a {
@@ -66,6 +118,7 @@ footer a:hover {
 .content:hover {
     transform: scale(1.01);
     transition: .15s;
+    box-shadow: 10px 10px 10px black;
 }
 
 .content_detail {
@@ -82,6 +135,7 @@ footer a:hover {
     float: left;
     max-width: 20%;
     padding: 0 20px 20px 0;
+    image-rendering: optimizeQuality;
 }
 
 #comment_text {
