--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE HTML>
 
 <html>
@@ -6,35 +7,74 @@
 <head>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Hello World Blog</title>
+
     <link rel="stylesheet" type="text/css" href="{% static 'blog/base.css' %}">
 
 </head>
 
 <body>
 
-    <div id="header">
-        <h1><strong>Hello World Blog</strong></h1>
+    <div id='header_and_login'>
+
+        <div id="header">
+
+            <h1><strong>Hello World Blog</strong></h1>
+
+        </div>
 
         {% if request.user.is_authenticated %}
+
+            <div id='logged_user_buttons'>
+
+                <p>Welcome, {{ user.username }}!</p>
+                
+                <a id="login" href="{% url 'blog:new_post' %}">New post</a>
+
+            </div>
+
         {% else %}
-        <a id="login" href="{% url 'blog:signup' %}">Sign up</a>
-        <a id="signup" href="{% url 'blog:login' %}">Log in</a>
+
         {% endif %}
+
+        <div id="login_signup_buttons">
+
+            {% if request.user.is_authenticated %}            
+
+            <a id="login" href="{% url 'logout' %}">Log out</a>
+
+            {% else %}
+
+            <a id="signup" href="{% url 'blog:signup' %}">Sign up</a>
+
+            <a id="login" href="{% url 'blog:login' %}">Log in</a>
+
+            {% endif %}
+
+        </div>
+
     </div>
 
     <div id="main_menu">
+
         <a href="{% url 'blog:index' %}">Latest</a>
+
         <a href="#">Best</a>
+
         <a href="{% url 'blog:people' %}">People</a>
+
     </div>
 
 
     {% block content %}
+
     {% endblock %}
 
     <footer>
+
         <i>Created by <strong><a href="mailto:egor.shabalin.wd@gmail.com">Egor Shabalin</a></strong></i>
+
     </footer>
 
 </body>
