--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,7 +20,7 @@
 
         <div id="header">
 
-            <h1><strong>Hello World Blog</strong></h1>
+            <h1 id='site_name'><strong>Hello World Blog</strong></h1>
 
         </div>
 
@@ -28,9 +28,11 @@
 
             <div id='logged_user_buttons'>
 
-                <p>Welcome, {{ user.username }}!</p>
+                <p id='welcome'>Welcome, {{ user.username }}!</p>
                 
-                <a id="login" href="{% url 'blog:new_post' %}">New post</a>
+                <a id="button" href="{% url 'blog:new_post' %}">New post</a>
+
+                <a id="button" href="#">Dashboard</a>
 
             </div>
 
@@ -42,13 +44,13 @@
 
             {% if request.user.is_authenticated %}            
 
-            <a id="login" href="{% url 'logout' %}">Log out</a>
+                <a id="button" href="{% url 'logout' %}">Log out</a>
 
             {% else %}
 
-            <a id="signup" href="{% url 'blog:signup' %}">Sign up</a>
+                <a id="signup" href="{% url 'blog:signup' %}">Sign up</a>
 
-            <a id="login" href="{% url 'blog:login' %}">Log in</a>
+                <a id="button" href="{% url 'blog:login' %}">Log in</a>
 
             {% endif %}
 
@@ -58,11 +60,11 @@
 
     <div id="main_menu">
 
-        <a href="{% url 'blog:index' %}">Latest</a>
+        <a href="{% url 'blog:posts' %}">Latest</a>
 
-        <a href="#">Best</a>
+        <a href="{% url 'blog:best' %}">Best</a>
 
-        <a href="{% url 'blog:people' %}">People</a>
+        <a href="{% url 'blog:user_list' %}">People</a>
 
     </div>
 
